ecommerce-monorepo/infra/k8s/email-service-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: email-service
  labels:
    app: email
    tier: background
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
        tier: background
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: email-service
          image: ecommerce-email:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "150m"
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            httpGet:
              path: /api/email/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/email/health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email
  ports:
    - port: 5000
      targetPort: 5000
