ecommerce-monorepo/infra/k8s/invoice-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-service
  labels:
    app: invoice
    tier: background
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: invoice
  template:
    metadata:
      labels:
        app: invoice
        tier: background
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: invoice-service
          image: ecommerce-invoice:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - containerPort: 4005
              name: http
          readinessProbe:
            httpGet:
              path: /api/invoice/health
              port: 4005
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/invoice/health
              port: 4005
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: invoice-service
spec:
  selector:
    app: invoice
  ports:
    - port: 4005
      targetPort: 4005
