ecommerce-monorepo/infra/k8s/orders-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  labels:
    app: orders
    tier: core
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
        tier: core
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: orders-service
          image: ecommerce-orders:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - containerPort: 4004
              name: http
          readinessProbe:
            httpGet:
              path: /api/orders/health
              port: 4004
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/orders/health
              port: 4004
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
    - port: 4004
      targetPort: 4004
