ecommerce-monorepo/infra/k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/use-gzip: "true"
    nginx.ingress.kubernetes.io/gzip-types: "application/javascript text/css application/json application/xml text/plain"
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - rohit-ecommerce-microservice.dedyn.io
    secretName: ecommerce-tls-prod
  rules:
  - host: rohit-ecommerce-microservice.dedyn.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 4000
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
