ecommerce-monorepo/infra/k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - rohit-ecommerce-monitor.dedyn.io
      secretName: grafana-tls-prod
  rules:
    - host: rohit-ecommerce-monitor.dedyn.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
